[tool.mypy]
python_version = 3.8
ignore_missing_imports = "true"
disallow_untyped_calls = "false"

[tool.pytest.ini_options]
markers = [
    "incremental",
]

[project]
authors = [
    { name = "PabloLec", email = "pablolec@pm.me" },
]
license = { text = "GPL-3.0 License" }
requires-python = "<4.0.0,>=3.8.1"
dependencies = [
    "textual==0.80.0",
]
name = "recoverpy"
version = "2.1.9"
description = "A TUI to recover overwritten or deleted data."
readme = "README.md"
keywords = [
    "data",
    "recovery",
    "search",
    "cli",
    "console",
    "cui",
    "tui",
    "ncurses",
    "terminal",
    "cybersec",
    "cybersecurity",
    "security",
    "pentesting",
    "pentest",
    "forensics",
    "forensic",
    "hack",
    "hacking",
    "data recovery",
    "data recovery tool",
    "grep",
    "linux",
    "unix",
    "education",
    "teaching",
    "training",
    "teach",
    "learn",
    "textual",
    "asyncio",
    "async",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[project.urls]
homepage = "https://github.com/PabloLec/recoverpy"
repository = "https://github.com/PabloLec/recoverpy"
documentation = "https://github.com/PabloLec/recoverpy#readme"

[project.scripts]
recoverpy = "recoverpy.__init__:main"

[dependency-groups]
dev = [
    "pytest-asyncio<0.25.0,>=0.20.3",
    "ruff<0.8.6,>=0.5.1",
    "coverage<8.0.0,>=7.6.1",
    "pytest<9.0.0,>=8.3.4",
    "pylint<4.0.0,>=3.2.7",
    "isort<6.0.0,>=5.13.2",
    "black<25.0,>=24.8",
    "flake8<8.0.0,>=7.1.1",
    "pre-commit<4.0.0,>=3.5.0",
    "flake8-bandit<5.0.0,>=4.1.1",
    "flake8-bugbear<25.0.0,>=24.12.12",
    "flake8-builtins<3.0.0,>=2.5.0",
    "flake8-comprehensions<4.0.0,>=3.15.0",
    "darglint<2.0.0,>=1.8.1",
    "flake8-docstrings<2.0.0,>=1.7.0",
    "flake8-isort<7.0.0,>=6.1.1",
    "flake8-pytest-style<3.0.0,>=2.0.0",
    "flake8-mutable<2.0.0,>=1.2.0",
    "flake8-html<1.0.0,>=0.4.1",
    "flake8-simplify<1.0.0,>=0.21.0",
    "flake8-aaa<1.0.0,>=0.17.0",
    "pytest-mock==3.14.0",
    "pytest-cov<6.0.0,>=5.0.0",
    "coverage-badge<2.0.0,>=1.1.2",
    "mypy<2.0,>=1.14",
    "types-PyYAML<7.0.0,>=6.0.12",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"